--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "react-bootstrap": "^2.2.2",
     "react-currency-format": "^1.1.0",
     "react-dom": "^17.0.2",
+    "react-query": "^3.34.19",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-select": "^5.2.2",
     "react-toastify": "^8.2.0",
     "web-vitals": "^2.1.4"
   },
